--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+alembic==1.17.0
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 black==25.1.0
 certifi==2025.6.15
 cffi==1.17.1
+charset-normalizer==3.4.4
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.6
@@ -12,6 +14,7 @@ ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.13
 fastapi-cli==0.0.7
+fastapi-cloud-cli==0.1.5
 greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
@@ -21,6 +24,7 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -43,9 +47,12 @@ python-dotenv==1.1.0
 python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.31.0
 rich==14.0.0
 rich-toolkit==0.14.7
+rignore==0.6.4
 rsa==4.9.1
+sentry-sdk==2.37.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -55,7 +62,7 @@ typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 ujson==5.10.0
+urllib3==2.5.0
 uvicorn==0.34.3
 watchfiles==1.1.0
 websockets==15.0.1
-requests==2.31.0
